# cvg_ardrone2_ibvs

./: .gitignore  .gitmodules  LICENSE  README.md  installWS.sh  setup.sh
atlante/: .gitignore  atlante.h  makefile  manifest.xml
atlante/include/: Matrix4.h  Vector3.h  cvgThread.h  cvgVector.h  cvg_types.h
atlante/sources/: HTMatrix4.cpp  Vector4.cpp  cvgException.cpp
droneBrain/: manifest.xml
droneController/: CMakeLists.txt  manifest.xml
droneController/src/include/Other/: Timer.h
droneController/src/include/controller/other/: LowPassFilter.h
droneController/src/include/stateObserver/EKF_lib/: matrixLib.h
droneController/srv/: setControlMode.srv
droneLogger/: manifest.xml
droneModule/: CMakeLists.txt
droneMsgs/: .gitignore  CMakeLists.txt
droneMsgs/msg/: droneHLCommand.msg  obstacleTwoDimWall.msg
droneMsgs/src/include/: communication_definition.h
droneOpenTLDInterface/: manifest.xml
droneStateEstimator/: CMakeLists.txt  manifest.xml
droneStateEstimator/src/include/: config_Mydrone.h  droneStateEstimator.h
droneStateEstimator/src/include/Other/: jesus_library.h
droneStateEstimator/src/include/stateObserver/EKF_lib/: extendedKalmanFilter.h  model.h
droneStateEstimator/src/include/stateObserver/models/: EKF_config_Parrot.h  EKF_config_Pelican.h  EKF_model_LinkQuad.h  EKF_model_Pelican.h
droneStateEstimator/src/sources/Other/: jesus_library.cpp
droneStateEstimator/src/sources/stateObserver/models/: EKF_model_Parrot.cpp
installation/: configSubmodules.cfg  gitSubmoduleAdd.sh  gitSubmoduleUpdateInit.sh  installStack.sh  installation_instructions.txt
launch_dir/: .gitignore  parrot_IBVSController_launcher_Release.sh  parrot_IBVSController_launcher_Release_NoLogging.sh  rosmake_IBVS_Release.sh
launch_dir/IBVS2013_launchfiles/: opentld_for_IBVSController.launch  (+3 more)
launchers/: parrot_IBVSController_launcher_Release.sh  stop.sh
localizationLib/: CMakeLists.txt  README  manifest.xml
newmat11Lib/: CMakeLists.txt  manifest.xml
newmat11Lib/src/: Makefile.in  _newmat.dox  _rbd_com.dox  cholesky.cpp  evalue.cpp  example.cpp  example.txt  fft.cpp  garch.cpp  hholder.cpp  jacobi.cpp  newfft.cpp  newmatap.h  nl_ex.cpp  nm11.htm  nm_b55.mak  nm_b56.mak  nm_cc.mak  nm_ex1.cpp  nm_ex1.txt  nm_ex2.cpp  nm_ex2.txt  nm_ex3.cpp  nm_ex3.txt  nm_gnu.mak  nm_i10.mak  nm_i8.mak  nm_il8.mak  nm_m6.mak  nm_m8.mak  nm_misc.cpp  nm_ow.mak  nm_targ.txt  readme.txt  sl_ex.cpp  solution.cpp  solution.h  sort.cpp  svd.cpp  test_exc.cpp  (+26 more)
parrotBrainInterface/: CMakeLists.txt  manifest.xml
parrotController/: CMakeLists.txt  manifest.xml
parrotDriver/: CMakeLists.txt  manifest.xml
parrotDriver/src/include/: Drone.h
parrotDriver/src/source/: Drone.cpp
parrotLogger/: CMakeLists.txt
parrotStateEstimator/: CMakeLists.txt  manifest.xml
pugixml/: README
referenceFrames/: CMakeLists.txt  manifest.xml
stack/atlante/: CMakeLists.txt  config.h  package.xml
stack/atlante/IDEs/Visual Studio/: Atlante.sln  Atlante.vcproj  ReadMe.txt
stack/atlante/IDEs/Visual Studio/Debug/: BuildLog.htm
stack/atlante/include/: HTMatrix4.h  Matrix3.h  RotMatrix3.h  Vector4.h  cvgCondition.h  cvgException.h  cvgMutex.h  cvgSemaphore.h  cvgString.h  cvgTimer.h
stack/atlante/sources/: Matrix3.cpp  Matrix4.cpp  RotMatrix3.cpp  Vector3.cpp  cvgMutex.cpp  cvgString.cpp  cvgThread.cpp  cvgTimer.cpp
stack/droneBrain/: CMakeLists.txt  package.xml
stack/droneBrain/src/include/: droneIBVSBrain.h
stack/droneBrain/src/sources/: droneIBVSBrain.cpp
stack/droneController/: CMakeLists.txt  README  README_IBVSController.md  package.xml
stack/droneController/src/include/: droneIBVSController.h
stack/droneController/src/include/Other/: jesus_library.h
stack/droneController/src/include/controller/other/: PID.h
stack/droneController/src/sources/: droneIBVSController.cpp
stack/droneController/src/sources/Other/: jesus_library.cpp
stack/droneController/src/sources/controller/Other/: LowPassFilter.cpp  PID.cpp
stack/droneLogger/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
stack/droneLogger/src/include/: DroneLogger.h
stack/droneLogger/src/sources/: main_tests.cpp
stack/droneLogger/srv/: getCLogPathInitTStamp.srv
stack/droneModule/: CMakeLists.txt  manifest.xml  package.xml
stack/droneModule/src/include/: droneModule.h
stack/droneModule/src/sources/: droneModule.cpp
stack/droneMsgs/: CMakeLists.txt  manifest.xml  package.xml
stack/droneMsgs/msg/: dronePose.msg  obsVector.msg  obstacleTwoDimPole.msg
stack/droneMsgs/src/include/: ardrone_modes.h
stack/droneOpenTLDInterface/: .gitignore  CMakeLists.txt  mainpage.dox  package.xml
stack/droneOpenTLDInterface/src/include/: droneopentldinterface.h
stack/droneOpenTLDInterface/src/sources/: droneopentldinterface.cpp
stack/droneStateEstimator/: CMakeLists.txt  README  package.xml
stack/droneStateEstimator/src/include/LMrT_poseConverter/: ekf_lmrt_pose_publisher.h
stack/droneStateEstimator/src/include/stateObserver/models/: EKF_config_LinkQuad.h  EKF_model_Parrot.h
stack/droneStateEstimator/src/sources/: droneStateEstimator.cpp
stack/droneStateEstimator/src/sources/LMrT_poseConverter/: ekf_lmrt_pose_publisher.cpp
stack/droneStateEstimator/src/sources/stateObserver/EKF_lib/: extendedKalmanFilter.cpp  matrixLib.cpp  model.cpp
stack/droneStateEstimator/src/sources/stateObserver/models/: EKF_model_LinkQuad.cpp  EKF_model_Pelican.cpp
stack/parrotBrainInterface/: CMakeLists.txt  package.xml
stack/parrotController/: CMakeLists.txt  manifest.xml  package.xml
stack/parrotController/launch/: parrot_IBVSController.launch
stack/parrotController/src/sources/: IBVScontrollerNodeMain.cpp
stack/parrotDriver/: CMakeLists.txt  package.xml
stack/parrotLogger/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
stack/parrotLogger/launch/: parrotLogger.launch
stack/parrotLogger/src/sources/: parrotLoggerNodeMain.cpp
stack/parrotStateEstimator/: CMakeLists.txt  package.xml
stack/parrotStateEstimator/src/sources/: parrotStateEstimator_Node.cpp  parrotStateEstimator_Node_WLog.cpp
(+31 files in other folders)
